# OCR-translation

./: .gitignore  camera_ocr.py  handtracker.py  main.py  ocr_translation.py  output.txt  pentracker.py  program development.docx  pyproject.toml  readme.md  test_ocr_translation.py  tmp.py  ~$ogram development.docx
ocr_translation/: __init__.py  cli.py  core.py  image_tools.py  utils.py
ocr_translation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_core.py  test_end_to_end.py  test_image_tools.py  test_utils.py
